--- a/theme.css
+++ b/theme.css
@@ -6,81 +6,81 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-/* #inlineContent { */
-    /* background-image: url('https://isaychris.github.io/themes/fundamental/assets/default.png'); */
-    /* background-position: center; */
-    /* background-size: cover; */
-    /* box-shadow: 3px 3px 2px 0.3px rgba(0, 0, 0, 0.3); */
-    /* height: 200px; */
-    /* width: 200px; */
-    /* border-radius: 100px; */
-    /* display: flex !important; */
-    /* position: absolute; */
-    /* top: 184px; */
-    /* left: 50%; */
-    /* margin-right: -50%; */
-    /* transform: translate(-50%, -50%); */
-/* } */
-/* #inlineContent::after { */
-    /* font-family: "Open Sans"; */
-    /* position: absolute; */
-    /* display: block; */
-    /* color: white; */
-    /* border-style: solid; */
-    /* border-color: rgba(255, 255, 255, 0.2); */
-    /* padding-top: 3px; */
-    /* padding-bottom: 4px; */
-    /* border-width: 1px; */
-    /* border-radius: 5px; */
-    /* margin-top: 220px; */
-    /* color: rgba(255, 255, 255, 0.7); */
-    /* font-size: 25px; */
-    /* width: 197px; */
-    /* text-align: center; */
-    /* background-color: rgba(255, 255, 255, 0.08); */
-    /* content:"MyAnimeList"; */
-/* } */
-/* #inlineContent:hover::after { */
-    /* background-color: rgba(255, 255, 255, 0.2); */
-/* } */
-/* body:before { */
-    /* content: ""; */
-    /* display: block; */
-    /* position: relative; */
-    /* height: 380px; */
-    /* background-image: url("https://isaychris.github.io/themes/fundamental/assets/pattern1.png"),url("https://isaychris.github.io/themes/fundamental/assets/pattern2.png"),linear-gradient(120deg, #155799, #159957); */
-/* } */
-/* BODY { */
-    /* margin: 0; */
-    /* color: whitesmoke; */
-    /* font-size: 11.00px; */
-    /* font-family: Verdana, Arial; */
-    /* background-repeat: no-repeat; */
-    /* background-color: #272B35; */
-/* } */
-/* * { */
-    /* text-decoration: none !important; */
-/* } */
+#inlineContent {
+    background-image: url('https://isaychris.github.io/themes/fundamental/assets/default.png');
+    background-position: center;
+    background-size: cover;
+    box-shadow: 3px 3px 2px 0.3px rgba(0, 0, 0, 0.3);
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+    display: flex !important;
+    position: absolute;
+    top: 184px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+#inlineContent::after {
+    font-family: "Open Sans";
+    position: absolute;
+    display: block;
+    color: white;
+    border-style: solid;
+    border-color: rgba(255, 255, 255, 0.2);
+    padding-top: 3px;
+    padding-bottom: 4px;
+    border-width: 1px;
+    border-radius: 5px;
+    margin-top: 220px;
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 25px;
+    width: 197px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.08);
+    content:"MyAnimeList";
+}
+#inlineContent:hover::after {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+body:before {
+    content: "";
+    display: block;
+    position: relative;
+    height: 380px;
+    background-image: url("https://isaychris.github.io/themes/fundamental/assets/pattern1.png"),url("https://isaychris.github.io/themes/fundamental/assets/pattern2.png"),linear-gradient(120deg, #155799, #159957);
+}
+BODY {
+    margin: 0;
+    color: whitesmoke;
+    font-size: 11.00px;
+    font-family: Verdana, Arial;
+    background-repeat: no-repeat;
+    background-color: #272B35;
+}
+* {
+    text-decoration: none !important;
+}
 
-/* // Determines the positioning of your list */
+// Determines the positioning of your list
 
 
-/* #list_surround { */
-    /* margin: auto; */
-    /* width: 920px; */
-    /* margin-bottom: 25px; */
-/* } */
-/* #list_surround .animetitle+small { */
-    /* border-style: solid; */
-    /* border-width: 1px; */
-    /* border-color: #5675B9; */
-    /* background-color: #5675B9 !important; */
-    /* margin-left: 8px; */
-    /* padding: 5px; */
-    /* color: whitesmoke; */
-    /* border-radius: 5px; */
-    /* opacity: 1 !important; */
-/* } */
+#list_surround {
+    margin: auto;
+    width: 920px;
+    margin-bottom: 25px;
+}
+#list_surround .animetitle+small {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #5675B9;
+    background-color: #5675B9 !important;
+    margin-left: 8px;
+    padding: 5px;
+    color: whitesmoke;
+    border-radius: 5px;
+    opacity: 1 !important;
+}
 /*
 // All links on your list
 */
